fix content structure in index.html and improve CSS styles for better layout and readability

--- a/TP1/style1.css
+++ b/TP1/style1.css
@@ -4,7 +4,6 @@
     font-family: Josefin Sans, sans-serif;
     box-sizing: border-box;
 }
-
 .hero {
     height: 100vh;
     width: 100%;
@@ -12,7 +11,6 @@
     background-size: cover;
     background-position: center;
 }
-
 nav {
     display: flex;
     justify-content: space-between;
@@ -23,7 +21,6 @@ nav {
     width: 100%;
     z-index: 1000; */
 }
-
 .logo {
     color: white;
     font-size: 35px;
@@ -31,29 +28,24 @@ nav {
     font-weight: 700;
     cursor: pointer;
 }
-
 span {
     color: #00bfff;
 }
-
 nav ul li {
     list-style: none;
     display: inline-block;
     padding: 10px 25px;
 }
-
 nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
     text-transform: capitalize;
 }
-
 nav ul li a:hover {
     color: #00bfff;
     transition: 0.4s;
 }
-
 .btn {
     padding: 10px 25px;
     background-color: #00bfff;
@@ -65,11 +57,28 @@ nav ul li a:hover {
     border-radius: 30px;
     transition: transform 0.4s;
 }
-
 .btn:hover {
     transform: scale(1.2);
     background-color: transparent;
     border: 2px solid #00bfff;
     color: #00bfff;
 }
-
+.content {
+    position: absolute; 
+    top: 50%;
+    left: 8%;
+    transform: translateY(-50%);
+}
+h1 {
+    color: white;
+    margin: 20px 0 20px;
+    font-size: 75px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+}
+h3 {
+    color: white;
+    font-size: 25px;
+    margin-bottom: 50px;
+}
